--- a/templates/fitbit.html
+++ b/templates/fitbit.html
@@ -1,12 +1,11 @@
 {% block fitbit %}
-	<div class="service">
-		<h2 style="font-size:42px">Fitbit</h2>
+	<div class="service" style="border-bottom: 1px solid #ccc" >
+		<h2 style="font-size:38px; margin: 20px 0px 0px 0px">Fitbit</h2>
 		<div class="data">
-			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 36px; font-weight: bold;">{{ fitbit.steps }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.steps_goal }} steps  </span></div>
-			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 36px; font-weight: bold;">{{ fitbit.distance }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.distance_goal }} miles  </span></div>
-			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 36px; font-weight: bold;">{{ fitbit.cals_out }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.cals_out_goal }} cals  </span></div>
-			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 36px; font-weight: bold;">{{ fitbit.floors }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.floors_goal }} floors  </span></div>
-			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 36px; font-weight: bold;">{{ fitbit.activity_score }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.activity_score_goal }}</span></div>
+			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.steps }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.steps_goal }} steps</span></div>
+			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.distance }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.distance_goal }} miles</span></div>
+			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.cals_out }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.cals_out_goal }} cals</span></div>
+			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.floors }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.floors_goal }} floors</span></div>
 		</div>
 	</div>
 {% endblock %}
