Add foursquare template.  Add checkin venue name data to email

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,15 @@
 <html>
-	<head>
-		<style type="text/css">
-			.service {
-				display: block;
-			}
-			.data div {
-				display: inline-block;
-			}
-			.metric {
-				font-family: helvetica;
-				font-size: 36px;
-				font-weight: bold;
-			}
-			.metric .goal {
-				font-size: 18px;
-				font-weight: normal;
-			}
-		</style>
-	</head>
+	<head></head>
 	<body>
-		<h1 style="margin-bottom:5px; border-bottom:1px solid #ccc">{{ name }}'s report for {{ date }}</h1>
+		<h1 style="font-size: 42px; margin-bottom:5px; border-bottom:1px solid #ccc">{{ name }}'s report for {{ date }}</h1>
 		{% if fitbit != None %}
 			{% include "fitbit.html" %}
 		{% endif %}
 		{% if withings != None %}
 			{% include "withings.html" %}
+		{% endif %}
+		{% if foursquare != None %}
+			{% include "foursquare.html" %}
 		{% endif %}
 	</body>
 </html>
