--- a/templates/withings.html
+++ b/templates/withings.html
@@ -1,3 +1,11 @@
 {% block withings %}
-	<div>More Testing Testing Testing</div>
+	<div class="service" style="border-bottom: 1px solid #ccc" >
+		<h2 style="font-size:38px; margin: 20px 0px 0px 0px">Withings</h2>
+		<div>
+			<div>{{ weight }} lbs</div>
+			<div>{{ bmi }} lbs</div>
+			<div>{{ lean_mass }} lbs</div>
+			<div>{{ fat_mass }} lbs</div>
+		</div>
+	</div>
 {% endblock %}
