--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 	<head></head>
 	<body>
-		<h1 style="font-size: 42px; margin-bottom:5px; border-bottom:1px solid #ccc">{{ name }}'s report for {{ date }}</h1>
+		<h1 style="font-size: 38px; margin-bottom:5px; border-bottom:1px solid #ccc">{{ name }}'s report for {{ date }}</h1>
 		{% if fitbit != None %}
 			{% include "fitbit.html" %}
 		{% endif %}
@@ -11,5 +11,8 @@
 		{% if foursquare != None %}
 			{% include "foursquare.html" %}
 		{% endif %}
+		{% if flickr != None %}
+			{% include "flickr.html" %}
+		{% endif %}		
 	</body>
 </html>
