--- a/templates/fitbit.html
+++ b/templates/fitbit.html
@@ -1,6 +1,6 @@
 {% block fitbit %}
-	<div class="service" style="border-bottom: 1px solid #ccc" >
-		<h2 style="font-size:38px; margin: 20px 0px 0px 0px">Fitbit</h2>
+	<div class="service" style="border-bottom: 1px solid #ccc; padding-bottom:10px;" >
+		<h2 style="font-size:38px; margin: 30px 0px 0px 0px">Fitbit (physical activity)</h2>
 		<div class="data">
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.steps }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.steps_goal }} steps</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.distance }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.distance_goal }} miles</span></div>
