--- a/templates/fitbit.html
+++ b/templates/fitbit.html
@@ -1,14 +1,14 @@
 {% block fitbit %}
 	<div class="service" style="border-bottom: 1px solid #ccc; padding-bottom:10px;" >
 		<h2 style="font-size:38px; margin: 30px 0px 0px 0px">Fitbit</h2>
-		<h3>Physical Activity</h3>
+		<h3 style="margin-bottom: 5px;">Physical Activity</h3>
 		<div class="data">
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.activities.steps }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.activities.steps_goal }} steps</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.activities.distance }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.activities.distance_goal }} miles</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.activities.cals_out }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.activities.cals_out_goal }} cals</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.activities.floors }}<span class="goal" style="font-size: 18px; font-weight: normal;"> /{{ fitbit.activities.floors_goal }} floors</span></div>
 		</div>
-		<h3>Nutrition</h3>
+		<h3 style="margin-bottom: 5px;">Nutrition</h3>
 		<div class="data">
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.logged_foods.totals.calories }}<span class="goal" style="font-size: 18px; font-weight: normal;">/2500 calories</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.logged_foods.totals.fat }}<span class="goal" style="font-size: 18px; font-weight: normal;">/70g fat</span></div>
@@ -17,7 +17,7 @@
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.logged_foods.totals.fiber }}<span class="goal" style="font-size: 18px; font-weight: normal;">/29g fiber</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.logged_foods.totals.sodium }}<span class="goal" style="font-size: 18px; font-weight: normal;">/3000mg sodium</span></div>
 		</div>
-		<h3></h3>
+		<h3 style="margin-bottom: 5px;">Sleep</h3>
 		<div class="data">
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.sleep.hrs_sleep }}<span class="goal" style="font-size: 18px; font-weight: normal;">/8 hrs</span></div>
 			<div class="metric" style="display: inline-block; font-family: helvetica; font-size: 32px; font-weight: bold; margin-right:5px;">{{ fitbit.sleep.bed_time }}<span class="goal" style="font-size: 18px; font-weight: normal;">/12:00 am</span></div>			
